<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <!-- main_menu.xml -->

    <item
        android:id="@+id/ItemSalir"
        android:title="@string/salir"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/ItemConfuracion"
        android:title="@string/configuraci_n"
        app:showAsAction="never"
        />


    <item
        android:id="@+id/menu_create_room"
        android:icon="@drawable/baseline_create_new_folder_24"
        android:title="@string/crear_sala"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/ChatMenu"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/chatscreados"
        app:showAsAction="always"
        />





</menu>