<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    android:layout_height="match_parent"
    tools:context=".SesionStart.LoginActivity">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     >
     
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_40sdp"
         android:text="@string/bienvenido_al_app_de_consultas"
         android:textColor="#1575C0"
         android:textSize="@dimen/_18sdp"
         android:textStyle="bold"
         />

     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
         android:text="@string/iniciar_sesi_n"
         android:textColor="@color/primary"
         android:textSize="@dimen/_14sdp"
         android:textStyle="bold"
         tools:ignore="TextSizeCheck" />

     <EditText
         android:id="@+id/InputEmial"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_45sdp"
         android:layout_marginTop="@dimen/_40sdp"
         android:hint="@string/ingresar_email"
         android:background="@drawable/background_input"
         tools:ignore="SpeakableTextPresentCheck"
         android:imeOptions="actionNext"
         android:importantForAutofill="no"
         android:inputType="textEmailAddress"
         android:paddingStart="@dimen/_16sdp"
         android:paddingEnd="@dimen/_16sdp"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/_13ssp"
         />

     <EditText
         android:id="@+id/InputPassword"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_45sdp"
         android:layout_marginTop="@dimen/_16sdp"
         android:hint="@string/ingrese_contrese_a"
         android:background="@drawable/background_input"
         tools:ignore="SpeakableTextPresentCheck"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="textPassword"
         android:paddingStart="@dimen/_16sdp"
         android:paddingEnd="@dimen/_16sdp"
         android:textColor="@color/primary_text"
         android:textSize="@dimen/_13ssp"
         />

     <com.google.android.material.button.MaterialButton
         android:id="@+id/ingresar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_50sdp"
         android:layout_marginTop="@dimen/_20sdp"
         android:text="@string/ingresar"
         android:onClick="ingresar"
         android:textSize="@dimen/_13ssp"
         app:cornerRadius="@dimen/_8sdp"
         />

     <TextView
         android:id="@+id/tvCrearUsuario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_30sdp"
         android:onClick="IntoNewUser"
         android:text="@string/crear_nuevo_usuario"
         android:textColor="@color/primary"
         android:textSize="@dimen/_14sdp"
         android:textStyle="bold"
         tools:ignore="TouchTargetSizeCheck" />
 </LinearLayout>
</ScrollView>